RESOLVED FIXED64677
Fix bugs in String.prototype this handling.
https://bugs.webkit.org/show_bug.cgi?id=64677
Summary Fix bugs in String.prototype this handling.
Gavin Barraclough
Reported 2011-07-17 23:28:58 PDT
undefined/null this values should throw TypeErrors, not convert to the global object, and primitive values should not be converted via object types.
Attachments
Preliminary patch (12.64 KB, patch)
2011-07-17 23:31 PDT, Gavin Barraclough
no flags
The patch (18.44 KB, patch)
2011-07-19 11:47 PDT, Gavin Barraclough
oliver: review+
webkit.review.bot: commit-queue-
Gavin Barraclough
Comment 1 2011-07-17 23:31:18 PDT
Created attachment 101130 [details] Preliminary patch
Gavin Barraclough
Comment 2 2011-07-19 11:47:48 PDT
Created attachment 101352 [details] The patch
WebKit Review Bot
Comment 3 2011-07-19 12:12:23 PDT
Comment on attachment 101352 [details] The patch Attachment 101352 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/9153271 New failing tests: fast/js/array-prototype-properties.html
Gavin Barraclough
Comment 4 2011-07-19 12:16:47 PDT
Fixed in r91284
Note You need to log in before you can comment on or make changes to this bug.